--- a/app/app-module/src/main/res/values/strings.xml
+++ b/app/app-module/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SoftwareprojektApp</string>
+    <string name="send_activity_connection_success">Connection successful</string>
 </resources>
