added stop sending data button, move disconnect to action bar, try to use host name for server name

--- a/app/app-module/src/main/res/values/strings.xml
+++ b/app/app-module/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SoftwareprojektApp</string>
     <string name="send_activity_connection_success">Connection successful</string>
+    <string name="disconnect">Disconnect</string>
 </resources>
