--- a/app/app-module/src/main/res/values-de/strings.xml
+++ b/app/app-module/src/main/res/values-de/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">SoftwareprojektApp</string>
     <string name="disconnect">Trennen</string>
     <string name="send_activity_connection_success">Verbindung erflogreich!</string>
+    <string name="reposition">Zentrieren</string>
+    <string name="hold_sonsors">Sensoren blockieren</string>
+    <string name="settings">Einstellungen</string>
 </resources>
