--- a/app/app-module/src/main/res/values-de/strings.xml
+++ b/app/app-module/src/main/res/values-de/strings.xml
@@ -6,4 +6,8 @@
     <string name="reposition">Zentrieren</string>
     <string name="hold_sonsors">Sensoren blockieren</string>
     <string name="settings">Einstellungen</string>
+    <string name="client_name">Gerätename</string>
+    <string name="start_discovery">Server suchen</string>
+    <string name="stop_discovery">Suche beenden</string>
+    <string name="changes_only_stored_locally">Änderungen werden nur lokal gespeichert.</string>
 </resources>
