--- a/app/app-module/src/main/res/values/strings.xml
+++ b/app/app-module/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="hold_sonsors">Hold sensors</string>
     <string name="reposition">Center</string>
     <string name="settings">Settings</string>
+    <string name="client_name">Client name</string>
+    <string name="start_discovery">Start discovery!</string>
+    <string name="stop_discovery">Stop discovery!</string>
+    <string name="changes_only_stored_locally">Changes will only be stored locally.</string>
+    <string name="ports_below_1024_denied">Ports below 1024 are reserved</string>
+    <string name="ports_above_65535_denied">Ports above 65535 do not exist</string>
+    <string name="non_number_denied">Numbers only</string>
 </resources>
