--- a/app/app-module/src/main/res/values/strings.xml
+++ b/app/app-module/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="send_activity_connection_success">Connection successful</string>
     <string name="disconnect">Disconnect</string>
     <string name="hold_sonsors">Hold sensors</string>
-    <string name="reposition">Center</string>
+    <string name="reposition">Reset</string>
     <string name="settings">Settings</string>
     <string name="client_name">Client name</string>
     <string name="start_discovery">Start discovery!</string>
