--- a/app/app-module/src/main/res/values/strings.xml
+++ b/app/app-module/src/main/res/values/strings.xml
@@ -12,4 +12,19 @@
     <string name="ports_below_1024_denied">Ports below 1024 are reserved</string>
     <string name="ports_above_65535_denied">Ports above 65535 do not exist</string>
     <string name="non_number_denied">Numbers only</string>
+    <string name="sensor_accelerometer">Accelerometer</string>
+    <string name="sensor_ambient_temperature">Ambient temperature</string>
+    <string name="sensor_game_rotation_vector">Game rotation vector</string>
+    <string name="sensor_gravity">Gravity</string>
+    <string name="sensor_gyroscope">Gyroscope</string>
+    <string name="sensor_gyroscope_uncalibrated">Uncalibrated gyroscope</string>
+    <string name="sensor_light">Light</string>
+    <string name="sensor_linear_acceleration">Linear acceleration</string>
+    <string name="sensor_magnetic_field">Magnetic field</string>
+    <string name="sensor_magnetic_field_uncalibrated">Uncalibrated magnetic field</string>
+    <string name="sensor_orientation">Orientation</string>
+    <string name="sensor_pressure">Pressure</string>
+    <string name="sensor_proximity">Proximity</string>
+    <string name="sensor_relative_humidity">Relative humidity</string>
+    <string name="sensor_rotation_vector">Rotation vector</string>
 </resources>
