increased title page font size

--- a/Abschlussbericht/title.tex
+++ b/Abschlussbericht/title.tex
@@ -1,7 +1,8 @@
 \begin{center}
+{\large 
 Betreuer: Sebastian Nielebock, Robert Heumüller\\
 Professor Ortmeier\\
-13.2.2017
+13.2.2017}
 \end{center}
 
 \newpage
