working on the sister todos

--- a/Abschlussbericht/title.tex
+++ b/Abschlussbericht/title.tex
@@ -1,8 +1,11 @@
 \begin{center}
-{\large 
-Betreuer: Sebastian Nielebock, Robert Heumüller\\
+\includegraphics[width = 40mm]{cse.png}\\
+{\large
 Professor Ortmeier\\
-13.2.2017}
+Betreuer: Robert Heumüller, Sebastian Nielebock\\
+13.2.2017\\
+OvGU}
 \end{center}
-
+\thispagestyle{empty}
 \newpage
+\setcounter{page}{1}
